# VulkanMinimumApp

./: .gitignore  .gitmodules  README.md  comm  saida.txt  todo_features.txt
ex_00/: a.out  ex_00.cpp~  vkapp.cpp~  vkapp.h~
src/: CMakeLists.txt  app.cpp  app.h  ex_00.cpp  main.cpp  vkapp.cpp  vkapp.h
test/SDL_vulkan/: CMakeLists.txt
test/SDL_vulkan/examples/: cmake_install.cmake  example.c  example.c~
test/SDL_vulkan/include/: SDL_vulkan.h
test/SDL_vulkan/src/: SDL_vulkan.c~
test/imgui_vulkan/examples/example_sdl_vulkan/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example_sdl_vulkan  main.cpp
test/overoorde_tutorial/src/: App.cpp  App.h  PhysicalDeviceChooser.h  main.cpp
test/test_vulkan/: comm.txt  main.cpp  readme.txt  vulkan_extern.cpp  vulkan_extern.h  vulkan_function.cpp
